@@ -13,6 +13,7 @@ Chris Browet
 Daniel van Gerpen
 Colin Marquardt
 Andreas Laas
+Vincent Meurisse
 
 Merkaartor uses icons from the Tango Desktop Project 
 (http://tango-freedesktop.org/)
